--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,18 +1,23 @@
 # This file is just an orchestration
 cmake_minimum_required(VERSION 3.8.2)
-project(meta VERSION 1.0 LANGUAGES NONE)
-
+list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
+if(NOT CMAKE_BUILD_TYPE)
+  set(CMAKE_BUILD_TYPE "Release" CACHE STRING
+		"Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel."
+		FORCE)
+endif(NOT CMAKE_BUILD_TYPE)
 # Use find_package everywhere, no-op if it's a target
 macro(find_package)
 	if(NOT TARGET "${ARGV0}")
 		_find_package(${ARGV})
 	endif()
 endmacro()
-
 if(POLICY CMP0068)
 	# Don't modify install_name when touching RPATH.
 	cmake_policy(SET CMP0068 NEW)
 endif()
+
+project(meta VERSION 1.0 LANGUAGES NONE)
 
 include(CTest)
 set(CMAKE_VERBOSE_MAKEFILE ON)
