--- a/FooApp/CMakeLists.txt
+++ b/FooApp/CMakeLists.txt
@@ -13,7 +13,9 @@ if(UNIX)
 			"@loader_path/../lib")
 	endif()
 endif()
-target_link_libraries(${PROJECT_NAME} PRIVATE zlibstatic)
+target_link_libraries(${PROJECT_NAME} PRIVATE
+	gflags
+	zlibstatic)
 add_executable(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 # Test
