--- a/FooApp/CMakeLists.txt
+++ b/FooApp/CMakeLists.txt
@@ -15,6 +15,7 @@ if(UNIX)
 endif()
 target_link_libraries(${PROJECT_NAME} PRIVATE
 	gflags
+	glog
 	zlibstatic)
 add_executable(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
