--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -73,3 +73,26 @@ set(WITH_GFLAGS ON)
 set(BUILD_TESTING OFF)
 list(APPEND CMAKE_PREFIX_PATH ${CMAKE_BUILD_DIR}/gflags)
 add_subdirectory(${CMAKE_BINARY_DIR}/glog ${CMAKE_BINARY_DIR}/glog)
+
+################
+##  PROTOBUF  ##
+################
+# Download and unpack protobuf at configure time
+configure_file(
+	${CMAKE_CURRENT_SOURCE_DIR}/protobuf.CMakeLists.txt
+	${CMAKE_BINARY_DIR}/protobuf-download/CMakeLists.txt)
+execute_process(COMMAND ${CMAKE_COMMAND} -G "${CMAKE_GENERATOR}" .
+  RESULT_VARIABLE result
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/protobuf-download )
+if(result)
+  message(FATAL_ERROR "CMake step for protobuf failed: ${result}")
+endif()
+execute_process(COMMAND ${CMAKE_COMMAND} --build .
+  RESULT_VARIABLE result
+  WORKING_DIRECTORY ${CMAKE_BINARY_DIR}/protobuf-download )
+if(result)
+  message(FATAL_ERROR "Build step for protobuf failed: ${result}")
+endif()
+
+set(protobuf_BUILD_TESTS OFF CACHE BOOL "Enable protobuf test" FORCE)
+add_subdirectory(${CMAKE_BINARY_DIR}/protobuf/cmake	${CMAKE_BINARY_DIR}/protobuf)
