Fix glog integration

--- a/FooApp/CMakeLists.txt
+++ b/FooApp/CMakeLists.txt
@@ -16,8 +16,9 @@ endif()
 target_link_libraries(${PROJECT_NAME} PRIVATE
 	gflags
 	glog
+	zlibstatic
 	#Cbc
-	zlibstatic)
+	)
 add_executable(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 # Test
