Fix glog install rules errors

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -1,7 +1,8 @@
 set(BUILD_SHARED_LIBS OFF)
 set(BUILD_TESTING OFF)
-set(SKIP_INSTALL_ALL ON)
 set(CMAKE_POSITION_INDEPENDENT_CODE ON)
+set(CMAKE_SKIP_INSTALL_RULES TRUE)
+set(SKIP_INSTALL_ALL ON)
 
 ##############
 ##  GFLAGS  ##
