--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,11 +8,17 @@ if(NOT CMAKE_BUILD_TYPE)
 endif(NOT CMAKE_BUILD_TYPE)
 # Use find_package everywhere, no-op if it's a target
 macro(find_package)
-	if(NOT TARGET ${ARGV0})
+	if(NOT TARGET ${ARGV0} AND NOT TARGET ${ARGV0}::${ARGV0})
 		_find_package(${ARGV})
 	else()
-		get_target_property(TGT_VER ${ARGV0} VERSION)
-		message(STATUS "Found ${ARGV0}: CMake Target (found version \"${TGT_VER}\")")
+		if(TARGET ${ARGV0})
+			get_target_property(TGT_VER ${ARGV0} VERSION)
+			set(TGT ${ARGV0})
+		else()
+			get_target_property(TGT_VER ${ARGV0}::${ARGV0} VERSION)
+			set(TGT ${ARGV0}::${ARGV0})
+		endif()
+		message(STATUS "Found ${ARGV0}: CMake Target ${TGT} (found version \"${TGT_VER}\")")
 		set(${ARGV0}_FOUND TRUE)
 	endif()
 endmacro()
