Force to use gflags namespace

--- a/cmake/CMakeLists.txt
+++ b/cmake/CMakeLists.txt
@@ -28,6 +28,7 @@ if(result)
   message(FATAL_ERROR "Build step for gflags failed: ${result}")
 endif()
 
+set(GFLAGS_NAMESPACE "gflags" CACHE INTERNAL "Namespace for gflags")
 #set(GFLAGS_IS_SUBPROJECT TRUE)
 add_subdirectory(
 	${CMAKE_BINARY_DIR}/gflags-src
