--- a/FooApp/CMakeLists.txt
+++ b/FooApp/CMakeLists.txt
@@ -3,8 +3,7 @@ project(FooApp VERSION 1.0.0 LANGUAGES CXX)
 
 file(GLOB _SRCS "src/*.[hc]pp")
 
-find_package(gflags REQUIRED)
-find_package(glog REQUIRED)
+find_package(Foo REQUIRED)
 
 add_executable(${PROJECT_NAME} ${_SRCS})
 target_include_directories(${PROJECT_NAME} PRIVATE
@@ -12,17 +11,7 @@ target_include_directories(${PROJECT_NAME} PRIVATE
 	$<BUILD_INTERFACE:${PROJECT_BINARY_DIR}>
 	)
 target_compile_features(${PROJECT_NAME} PRIVATE cxx_std_11)
-target_link_libraries(${PROJECT_NAME} PRIVATE gflags	glog::glog)
-if(UNIX)
-	if(NOT APPLE)
-		set_target_properties(${PROJECT_NAME} PROPERTIES
-			INSTALL_RPATH "$ORIGIN/../lib")
-	else()
-		set_target_properties(${PROJECT_NAME} PROPERTIES
-			INSTALL_RPATH
-			"@loader_path/../lib")
-	endif()
-endif()
+target_link_libraries(${PROJECT_NAME} PRIVATE Foo::Foo)
 add_executable(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 # Test
@@ -34,10 +23,5 @@ endif()
 # Install
 include(GNUInstallDirs)
 install(TARGETS ${PROJECT_NAME}
-	EXPORT ${PROJECT_NAME}Targets
 	RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-	)
-install(EXPORT ${PROJECT_NAME}Targets
-	NAMESPACE ${PROJECT_NAME}::
-	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/${PROJECT_NAME}
 	)
