--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -42,6 +42,6 @@ endif()
 add_subdirectory(cmake)
 
 add_subdirectory(Foo)
-add_subdirectory(Bar)
-
 add_subdirectory(FooApp)
+
+#add_subdirectory(Bar)
