--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,12 +14,12 @@ macro(find_package)
 	if(NOT TARGET ${ARGV0} AND NOT TARGET ${ARGV0}::${ARGV0})
 		_find_package(${ARGV})
 	else()
-		if(TARGET ${ARGV0})
-			get_target_property(TGT_VER ${ARGV0} VERSION)
-			set(TGT ${ARGV0})
-		else()
+		if(TARGET ${ARGV0}::${ARGV0})
 			get_target_property(TGT_VER ${ARGV0}::${ARGV0} VERSION)
 			set(TGT ${ARGV0}::${ARGV0})
+		else()
+			get_target_property(TGT_VER ${ARGV0} VERSION)
+			set(TGT ${ARGV0})
 		endif()
 		message(STATUS "Found ${ARGV0}: CMake Target ${TGT} (found version \"${TGT_VER}\")")
 		set(${ARGV0}_FOUND TRUE)
