--- a/Bar/CMakeLists.txt
+++ b/Bar/CMakeLists.txt
@@ -19,9 +19,8 @@ target_link_libraries(${PROJECT_NAME} PUBLIC Foo::Foo)
 add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 # Install
-include(GNUInstallDirs)
 install(TARGETS ${PROJECT_NAME}
-	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}
+	EXPORT SampleTargets
 	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/bar
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
