--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,11 +3,8 @@ cmake_minimum_required(VERSION 3.8.2)
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")
 
 # Force default build type to Release
-if(NOT CMAKE_BUILD_TYPE)
-  set(CMAKE_BUILD_TYPE "Release" CACHE STRING
-		"Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel."
-		FORCE)
-endif(NOT CMAKE_BUILD_TYPE)
+set(CMAKE_BUILD_TYPE "Release" CACHE STRING
+	"Choose the type of build, options are: Debug Release RelWithDebInfo MinSizeRel.")
 
 # Use find_package everywhere, no-op if it's a target
 macro(find_package)
@@ -34,12 +31,14 @@ endif()
 project(meta VERSION 1.0 LANGUAGES NONE)
 
 include(CTest)
+include(GNUInstallDirs)
 set(CMAKE_VERBOSE_MAKEFILE ON)
+
 if(UNIX)
   option(BUILD_SHARED_LIBS "Build shared libraries(.so)." ON)
 else()
 	# only support for static build on Windows.
- set(BUILD_SHARED_LIBS OFF)
+	set(BUILD_SHARED_LIBS OFF)
 endif()
 
 # Build Dependencies
@@ -49,3 +48,24 @@ add_subdirectory(Foo)
 add_subdirectory(FooApp)
 
 add_subdirectory(Bar)
+
+# Install
+install(EXPORT SampleTargets
+	NAMESPACE Sample::
+	DESTINATION ${CMAKE_INSTALL_LIBDIR}/cmake/Sample
+	COMPONENT Devel)
+include(CMakePackageConfigHelpers)
+configure_package_config_file(SampleConfig.cmake.in
+	"${PROJECT_BINARY_DIR}/SampleConfig.cmake"
+	INSTALL_DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/Sample"
+	NO_SET_AND_CHECK_MACRO
+  NO_CHECK_REQUIRED_COMPONENTS_MACRO)
+write_basic_package_version_file(
+	"${PROJECT_BINARY_DIR}/SampleConfigVersion.cmake"
+	COMPATIBILITY SameMajorVersion)
+install(
+	FILES
+	"${PROJECT_BINARY_DIR}/SampleConfig.cmake"
+	"${PROJECT_BINARY_DIR}/SanpleConfigVersion.cmake"
+	DESTINATION "${CMAKE_INSTALL_LIBDIR}/cmake/Sample"
+	COMPONENT Devel)
