--- a/Foo/CMakeLists.txt
+++ b/Foo/CMakeLists.txt
@@ -44,11 +44,11 @@ target_link_libraries(${PROJECT_NAME} PUBLIC
 	ZLIB::ZLIB
 	protobuf::libprotobuf
 	)
-add_library(${PROJECT_NAME}::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
+add_library(CMakeExternal::${PROJECT_NAME} ALIAS ${PROJECT_NAME})
 
 # Install
 install(TARGETS ${PROJECT_NAME}
-	EXPORT SampleTargets
+	EXPORT CMakeExternalTargets
 	PUBLIC_HEADER DESTINATION ${CMAKE_INSTALL_INCLUDEDIR}/foo
 	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
 	LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
