--- a/cmake/CMakeExternalConfig.cmake.in
+++ b/cmake/CMakeExternalConfig.cmake.in
@@ -1,10 +1,9 @@
-## Cbc CMake configuration file
+# CMakeExternal CMake configuration file
 
 include(CMakeFindDependencyMacro)
-
 find_dependency(ZLIB REQUIRED NO_MODULE)
 find_dependency(gflags REQUIRED NO_MODULE)
 find_dependency(glog REQUIRED NO_MODULE)
 find_dependency(Protobuf REQUIRED NO_MODULE)
 
-include("${CMAKE_CURRENT_LIST_DIR}/SampleTargets.cmake")
+include("${CMAKE_CURRENT_LIST_DIR}/CMakeExternalTargets.cmake")
