--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ macro(find_package)
 	endif()
 endmacro()
 
-project(meta VERSION 1.0 LANGUAGES NONE)
+project(meta VERSION 1.0 LANGUAGES CXX)
 
 include(CTest)
 include(GNUInstallDirs)
