--- a/ci/sample/CMakeLists.txt
+++ b/ci/sample/CMakeLists.txt
@@ -2,7 +2,7 @@ cmake_minimum_required(VERSION 3.5)
 project(Sample VERSION 1.0.0 LANGUAGES CXX)
 
 include(CTest)
-find_package(CMakeCpp REQUIRED)
+find_package(CMakeExternal REQUIRED)
 
 add_executable(sample main.cpp)
 #target_compile_features(sample PUBLIC cxx_std_11)
@@ -10,7 +10,7 @@ set_target_properties(sample PROPERTIES
   CXX_STANDARD 11
   CXX_STANDARD_REQUIRED ON
   VERSION ${PROJECT_VERSION})
-target_link_libraries(sample PRIVATE CMakeCpp::FooBar)
+target_link_libraries(sample PRIVATE CMakeExternal::Foo)
 
 if(BUILD_TESTING)
 	add_test(NAME sample_UT COMMAND sample)
