--- a/.travis.yml
+++ b/.travis.yml
@@ -20,7 +20,7 @@ before_install:
   - if [ $TRAVIS_OS_NAME == osx ]; then brew update; fi
   # see https://github.com/travis-ci/travis-ci/issues/10275
   - if [ $TRAVIS_OS_NAME == osx ]; then brew install gcc || brew link --overwrite gcc; fi
-  - if [ $TRAVIS_OS_NAME == osx ]; then brew install make --with-defaults-names; fi
+  - if [ $TRAVIS_OS_NAME == osx ]; then brew install make; fi
 
 script:
   - cmake --version
